# libaustralis

./: Cargo.toml  README.md
samples/xboxcatalog/: Cargo.toml
samples/xboxcatalog/src/: main.rs
samples/xboxunity/: Cargo.toml
samples/xboxunity/src/: main.rs
src/: aurora.rs  lib.rs  telnet.rs  utils.rs  xboxcatalog.rs  xboxunity.rs
src/aurora/: assets.rs  ftp.rs  http.rs  http_schemas.rs
