[package]
name = "libaustralis"
version = "0.3.0"
description = "A library of common structures and functions that can be used for interacting with the Aurora Xbox 360 Dashboard."
authors = ["jrobiche"]
license = "GPL-3.0-or-later"
repository = "https://github.com/jrobiche/libaustralis"
edition = "2021"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.9"
log = "0.4.29"
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
suppaftp = "8.0.2"
telnet = "0.2.4"
texpresso = "2.0.2"
xml-rs = "1.0.0"
